[project]
name = "sqlite-vault"
version = "0.1.0"
description = "Transparent field-level encryption for SQLite with Keychain-backed keys"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "RedBeret"}]
dependencies = ["cryptography>=44.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlite_vault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
